deployment ready and working, readme updated
