# Handin 3/Backend/docs/swagger.json
@@ -4,6 +4,33 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/mqtt-connection": {
+            "get": {
+                "description": "Indicates if api is connected to MQTT broker",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "GET API Endpoints"
+                ],
+                "summary": "Indicates if api is connected to MQTT broker",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.StatusDTO"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/api/v1/sensors/air-quality/co2": {
             "get": {
                 "description": "Gets the latest Co2 measurement from the database",
@@ -113,7 +140,15 @@
                     "type": "string"
                 },
                 "value": {
-                    "type": "number"
+                    "type": "integer"
+                }
+            }
+        },
+        "models.StatusDTO": {
+            "type": "object",
+            "properties": {
+                "alive": {
+                    "type": "boolean"
                 }
             }
         }
